--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -30,17 +30,15 @@
 }
 
 .btn{
-    background-color: #203A4C;
-    height: 4.5vw;
-    max-width: 16vw;
+    display: flex;
     position: absolute;
     bottom: 0;
     z-index: 3;
-    align-items: center;
+    align-items: flex-end;
 }
 .btn button{
     height: 4.5vw;
-    max-width: 16vw;
+    width: 16vw;
 }
 
 .button-hero{
@@ -53,7 +51,7 @@
     background: #000000;
     display: flex;
     opacity: 0.1;
-    max-width: 50px;
+    width: 40%;
     height: 100%;
     align-items: center;
     justify-content: center;
