--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -17,14 +17,14 @@
     z-index: 2;
     font-family: "Ibarra Real Nova";
     padding: 10px 15px;
-    max-width: 30vw;
+    width: 20vw;
     height: 35vh;
 }
 
 .presentation p{
     font-weight: 700;
     text-align: left;
-    font-size: 3.4vw;
+    font-size: 2vw;
     max-width: 100%;
     height: 100%;
 }
@@ -37,7 +37,7 @@
     align-items: flex-end;
 }
 .btn button{
-    height: 4.5vw;
+    height: 3.5vw;
     width: 16vw;
 }
 
