--- a/css/pages.css
+++ b/css/pages.css
@@ -1,5 +1,10 @@
+.container{
+    height: 100%;
+}
+
 .img-titulo{
-    max-width: 100%;
+    height: 500px;
+    width: 1110px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +16,7 @@
 }
 
 .projeto{
-    max-width: 100%;
+    width: 1110px;
     display: flex;
     flex-direction: column;
     margin-top: 115px;
@@ -29,9 +34,13 @@
 
 .titulo-projeto{
     display: flex;
-    font-family: "Ibarra Real Nova";
-    font-size: 32px;
+    font-family: 'Ibarra Real Nova';
+    font-style: normal;
     font-weight: 400;
+    font-size: 32px;
+    line-height: 42px;
+    letter-spacing: -0.285714px;
+    color: #33323D;
     margin-bottom: 28px;
     flex-direction: column;
     align-items: center;
@@ -39,27 +48,35 @@
 
 .direita{
     display: flex;
-    width: 290px;
+    width: 350px;
+    height: 498px;
     flex-direction: column;
     justify-content: flex-start;
 }
 
 .titulo-conteudo{
     display: flex;
-    font-family: "Ibarra Real Nova";
-    font-size: 40px;
+    font-family: 'Ibarra Real Nova';
+    font-style: normal;
     font-weight: 700;
+    font-size: 40px;
     line-height: 42px;
-    letter-spacing: -0.3571428656578064px;
-    text-align: left;
+    letter-spacing: -0.357143px;
+    color: #33323D;
     margin-bottom: 29px;
 }
 
 .texto-direita{
-    font-family: "Public Sans";
-    font-size: 16px;
+    height: 120px;
+    width: 350px;
+    font-family: 'Public Sans';
+    font-style: normal;
     font-weight: 400;
-    line-height: 25px;
+    font-size: 16px;
+    line-height: 30px;
+    color: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.8;
     margin-bottom: 53px;
 }
 
@@ -67,10 +84,14 @@
     font-family: 'Public Sans';
     font-style: normal;
     font-weight: 700;
-    font-size: 13px;
+    font-size: 16px;
     line-height: 30px;
     color: #5FB4A2;
     margin-bottom: 16px;
+}
+
+a{
+    padding: 0;
 }
 
 .direita button{
@@ -91,31 +112,37 @@
 .esquerda{
     display: flex;
     flex-direction: column;
-    width: 430px;
+    width: 635px;
+    height: 1192px;
 }
 
 .texto-esquerda{
+    height: 180px;
+    width: 635px;
     font-family: 'Public Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
     line-height: 30px;
     color: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.8;
     margin-bottom: 40px;
 }
 
 .titulo-preview{
-    font-family: 'Ibarra Real Nova';
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
     line-height: 42px;
+    letter-spacing: -0.285714px;
     color: #33323D;
     margin-bottom: 29px;
 }
 
 .preview img{
-    width: 100%;
+    height: 400px;
+    width: 635px;
     margin-bottom: 32px;
 }
 
