--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -1,32 +1,35 @@
 .hero{
-    display: flex;
     margin-top: 54px;
-    flex-direction: column;
     position: relative;
 }
 
 .hero img{
-    max-width: 100%;
+    max-height: 600px;
+    max-width: 1110px;
     z-index: 1;
 }
 
 .presentation{
+    display: flex;
     background-color: #FAFAFA;
     position: absolute;
     bottom: 0;
+    left: 0;
     z-index: 2;
     font-family: "Ibarra Real Nova";
     padding: 10px 15px;
-    width: 20vw;
-    height: 35vh;
+    height: 357px;
+    width: 445px;
 }
 
 .presentation p{
+    font-family: 'Ibarra Real Nova';
+    font-style: normal;
     font-weight: 700;
-    text-align: left;
-    font-size: 2vw;
-    max-width: 100%;
-    height: 100%;
+    font-size: 50px;
+    line-height: 50px;
+    color: #33323D;
+    min-height: 357px;
 }
 
 .btn{
@@ -35,10 +38,17 @@
     bottom: 0;
     z-index: 3;
     align-items: flex-end;
+
 }
+
+.btn a{
+    padding: 0;
+}
+
 .btn button{
-    height: 3.5vw;
-    width: 16vw;
+    height: 48px;
+    width: 200px;
+    
 }
 
 .button-hero{
@@ -59,7 +69,11 @@
 }
 
 section{
+    display: flex;
     margin-top: 140px;
+    height: 601px;
+    width: 1110px;
+    justify-content: space-between;
 }
 
 .img-about{
@@ -70,15 +84,16 @@ section{
 }
 
 .img-about img{
-    max-width: 100%;
+    max-height: 600px;
+    max-width: 540px;
+    
 }
 .div-about{
-    max-width: 30%;
     display: flex;
+    height: 601px;
+    max-width: 430px;
     flex-direction: column;
-    margin-left: 10%;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-evenly;
 }
 
 .div-about a{
@@ -88,28 +103,41 @@ section{
     align-items: center;
 }
 .about{
-    font-family: "Ibarra Real Nova";
-    font-size: 250%;
+    font-family: 'Ibarra Real Nova';
+    font-style: normal;
     font-weight: 700;
-    color: rgb(51, 50, 61);
+    font-size: 40px;
+    
+    color: #33323D;
 }
 
 .text-about{
-    margin-top: 20px;
-    font-family: "Public Sans";
-    font-size: 70%;
+    height: 360px;
+    width: 430px;
+    font-family: 'Public Sans';
+    font-style: normal;
     font-weight: 400;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 30px;
+    color: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+}
+
+.div-about a{
+    height: 48px;
+    width: 204px;
+    padding: 0;
+    margin: 0 auto;
 }
 
 .btn-about{
-    height: 120%;
-    width: 130%;
+    height: 48px;
+    width: 204px;
     background-color: #F2F2F2;
     border: 1px solid #33323D;
     text-transform: uppercase;
     color: #33323D;
-    margin-top: 20px;
 }
 
 .btn-about:hover{
