--- a/css/global.css
+++ b/css/global.css
@@ -2,178 +2,115 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Ibarra Real Nova';
+    font-family: 'Ibarra Real Nova'
 }
 
 body{
+    width: 100vw;
     display: flex;
-    /* max-width: 100vw; */
-    max-height: 1964px;
-    margin: 0 auto;
-    background-color: #FAFAFA;
     flex-direction: column;
-    align-items: center;
 }
 
 .container{
+    margin: 3% 9% 0;
     display: flex;
-    /* max-width: 1100px; */
-    padding-top: 64px;
     flex-direction: column;
-    align-items: center;
 }
 
 header{
-    width: 1100px;
-    height: 32px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 94px;
+}
+
+a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    list-style: none;
+}
+
+nav{
+    display: flex;
+}
+
+nav a{
+    font-family: 'Public Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #33323D;
+    margin-left: 43px;
+}
+
+nav a:hover{
+    color: #5FB4A2;
+}
+
+nav a:active{
+    color: #5FB4A2;
+}
+
+section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo img{
-    height: 32px;
-    width: 60px;
-
-}
-
-nav{
-    width: 278px;
-    display: flex;
-    justify-content: space-between;
-}
-a{
-    list-style: none;
-    text-decoration: none;
-    color: #33323D;
-    font-family: "Public Sans";
-    font-size: 12px;
-    font-weight: 400;
-    text-transform: uppercase   ;  
-    padding-left: 43px;
-}
-a:active{
-    color: #5FB4A2;
-}
-
-a:hover{
-    color: #5FB4A2;
-}
-
-button{
-    display: flex;
-    height: 48px;
-    max-width: 165px;
-    border: none;
-    background-color: #203A4C;
-    color: #FFFFFF;
-    font-family: "Public Sans";
-    font-size: 12px;
-    align-items: center;
-    cursor: pointer;
-    justify-content: center;
-}
-
-button:hover{
-    background-color: #5FB4A2;
-}
-
-footer{
-    height: 84px;
-    width: 1110px;
-    margin-top: 150px;
-}
-
-.contact{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.contact p{
-    height: 84px;
-    max-width: 367px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 42px;
-    
-    color: #33323D;
-}
-
-.contact a{
-    margin: 0;
-    height: 48px;
-    width: 168px; 
-    display: flex;
-    justify-content: flex-end;
-    padding: 0;
-    margin: 0;
-}
-
-.contact button{
-    background-color: #F2F2F2;
-    color: #33323D;
-    border: 1px solid #33323D;
-    height: 48px;
-    width: 168px;    
-}
-
-.contact button:hover{
-    background-color: #33323D;
-    color: #F2F2F2;
-}
-
-section{
-    max-width: 1100px;
-    display: flex;
-    justify-content: center;
-}
-.footer{
-    margin-top: 150px;
-    height: 80px;
     width: 100%;
-    background-color: #33323D;
+    margin-top: 150px;
 }
 
-.footer div{
+.footer-text-contato{
+    width: 50%;
+}
+
+.footer{
     display: flex;
-    align-items: center;
-    height: 80px;
+    flex-direction: row;
     justify-content: space-around;
-}
-.img-footer nav{
-margin-left: 48px;
+    align-items: center;
+
+    width: 100%;
+    height: 80px;
+    margin-top: 150px;
 }
 
-.img-footer img{
-    width: 60.08px;
-    height: 32px;
-}
-
-.img-footer nav a{
-    color: #FFFFFF;
-    ;
-}
-
-.img-footer nav a:active{
-    color: #5FB4A2;
-}
-
-.img-footer nav a:hover{
-    color: #5FB4A2;
-}
-
-.footer div .social{
+.footer .img-header{
     display: flex;
-    width: 104px;
-    justify-content: space-between;
+}
+
+.footer nav a{
+color: #FFFFFF;
+}
+
+.footer nav a:hover{
+    color: #5FB4A2;
+}
+
+.footer nav a:active{
+    color: #5FB4A2;
+}
+
+.social{
+    display: flex;
+    flex-direction: row;
 }
 
 .social img{
-    height: 24px;
-    width: 24px;
+    margin-right: 16px;
 }
-
-
