--- a/css/pages.css
+++ b/css/pages.css
@@ -1,203 +1,6 @@
-.container{
-    height: 100%;
-}
-
-.img-titulo{
+main{
+    background-color: cornflowerblue;
+    width: 100%;
     height: 500px;
-    width: 1110px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 94px;
-}
-
-.img-titulo img{
-    max-width: 100%;
-}
-
-.projeto{
-    width: 1110px;
-    display: flex;
-    flex-direction: column;
-    margin-top: 115px;
-    align-content: space-between;
-}
-
-.conteudo{
-    display: flex;
-    max-width: 100%;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    margin-bottom: 64px;
-}
-
-.titulo-projeto{
-    display: flex;
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 42px;
-    letter-spacing: -0.285714px;
-    color: #33323D;
-    margin-bottom: 28px;
-    flex-direction: column;
-    align-items: center;
-}
-
-.direita{
-    display: flex;
-    width: 350px;
-    height: 498px;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.titulo-conteudo{
-    display: flex;
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 42px;
-    letter-spacing: -0.357143px;
-    color: #33323D;
-    margin-bottom: 29px;
-}
-
-.texto-direita{
-    height: 120px;
-    width: 350px;
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    color: #33323D;
-    mix-blend-mode: normal;
-    opacity: 0.8;
-    margin-bottom: 53px;
-}
-
-.texto-verde{
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    color: #5FB4A2;
-    margin-bottom: 16px;
-}
-
-a{
-    padding: 0;
-}
-
-.direita button{
-    height: 48px;
-    width: 204px;
-    background-color: #F2F2F2;
-    border: 1px solid #33323D;
-    text-transform: uppercase;
-    color: #33323D;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.direita button:hover{
-    background-color: #c2c2c29d;
-}
-
-.esquerda{
-    display: flex;
-    flex-direction: column;
-    width: 635px;
-    height: 1192px;
-}
-
-.texto-esquerda{
-    height: 180px;
-    width: 635px;
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 30px;
-    color: #33323D;
-    mix-blend-mode: normal;
-    opacity: 0.8;
-    margin-bottom: 40px;
-}
-
-.titulo-preview{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 42px;
-    letter-spacing: -0.285714px;
-    color: #33323D;
-    margin-bottom: 29px;
-}
-
-.preview img{
-    height: 400px;
-    width: 635px;
-    margin-bottom: 32px;
-}
-
-.transicao{
-    display: flex;
-    justify-content: space-between;
-}
-
-.transicao-esquerda img{
-    height: 16px;
-    width: 8px;
-    margin-right: 32px;
-}
-
-.transicao-esquerda{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.transicao-direita{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-    align-items: center;
-
-}
-
-.transicao-direita .transicao-proximo .proximo-projeto{
-    text-align: right;
-}
-
-.transicao-direita img{
-    height: 16px;
-    width: 8px;
-    margin-left: 32px;
-}
-.proximo{
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 36px;
-    letter-spacing: -0.285714px;
-    color: #33323D;
-}
-
-.proximo-projeto{
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    color: #33323D;
-    mix-blend-mode: normal;
-    opacity: 0.5;
+    margin-bottom: 115px;
 }
