--- a/pages/contato/style.css
+++ b/pages/contato/style.css
@@ -1,100 +1,36 @@
-.contato{
-    display: flex;
-    max-width: 100%;
-    flex-direction: column;
-}
-
-hr{
-    margin-top: 94px;
-    max-width: 100%;
-}
-
-.texto-contato{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 48px;
-}
-
-.div-contact{
-    display: flex;
-}
-
 .contact{
+    padding: 48px 0;
+    width: 100%;
     display: flex;
-    align-items: flex-start;
-    width: 60%;
+    border-top: 1px solid #33323d40;
+    border-bottom: 1px solid #33323d40;
 }
 
-.titulo-texto-contato{
-    max-width: 350px;
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 42px;
-
-    color: #33323D;
+.text-contact{
+    width: 50%;
 }
 
-.div-descricao{
+.description-contact{
+    width: 50%;
+}
+
+.body1{
+    margin-bottom: 54px;
+}
+
+.form{
+    margin-top: 47px;
+    display: flex;
+}
+
+h2{
+    width: 50%;
+}
+
+.form-contact{
     display: flex;
     flex-direction: column;
-    width: 40%;
-}
-
-.descricao-texto-contato{
-    max-width: 400px;
-
-    font-family: 'Public Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-
-
-    color: #33323D;
-
-    mix-blend-mode: normal;
-    opacity: 0.8;
-}
-
-.rede-social{
-    margin-top: 50px;
-    display: flex;
-}
-
-.rede-social img{
-    margin-right: 15px;
-}
-
-.form-contato{
-    display: flex;
-}
-.form-contato{
-    display: flex;
-    margin-top: 47px;
-    justify-content: space-between;
-}
-
-.titulo-form{
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 42px;
-
-    color: #33323D;
-}
-
-.formulario-contato{
-    width: 60%;
-}
-
-input{
-    width: 100%;
-    height: 30px;
-    padding-left: 5px;
+    width: 50%;
 }
 
 .input{
@@ -102,16 +38,20 @@ input{
     font-style: normal;
     font-weight: 700;
     font-size: 13px;
+    line-height: 30px;
     color: #33323D;
-    margin-top: 24px;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+}
+
+input{
+    background: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.1;
 }
 
 textarea{
-    height: 96px;
-    width: 100%;
-}
-
-button{
-    margin: 24px 0 109px;
-    width: 30%;
+    background: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.1;
 }
