--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -1,145 +1,98 @@
-.hero{
-    margin-top: 54px;
-    position: relative;
+header{
+    margin-bottom: 54px;
 }
 
-.hero img{
-    max-height: 600px;
-    max-width: 1110px;
-    z-index: 1;
-}
-
-.presentation{
+main{
+    background-image: url(../../assets/home/image-homepage-hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 600px;
     display: flex;
+    align-items: flex-end;
+}
+
+.texto-hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     background-color: #FAFAFA;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 2;
-    font-family: "Ibarra Real Nova";
-    padding: 10px 15px;
     height: 357px;
     width: 445px;
 }
 
-.presentation p{
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 50px;
-    line-height: 50px;
-    color: #33323D;
-    min-height: 357px;
+.texto-hero h2{
+    padding: 56px 28px 0;
 }
 
-.btn{
+.btn-sobre-mim{
     display: flex;
-    position: absolute;
-    bottom: 0;
-    z-index: 3;
-    align-items: flex-end;
-
-}
-
-.btn a{
-    padding: 0;
-}
-
-.btn button{
+    justify-content: space-between;
+    flex-direction: row;
     height: 48px;
     width: 200px;
-    
-}
-
-.button-hero{
-    justify-content: space-between;
-    padding-right: 30px;
-}
-
-.button-hero::before{
-    content: url(../../assets/icons/down-arrows.svg);
-    background: #000000;
-    display: flex;
-    opacity: 0.1;
-    width: 40%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-
-}
-
-section{
-    display: flex;
-    margin-top: 140px;
-    height: 601px;
-    width: 1110px;
-    justify-content: space-between;
-}
-
-.img-about{
-    display: flex;
-    max-width: 50%;
-    align-items: center;
-    justify-content: center;
-}
-
-.img-about img{
-    max-height: 600px;
-    max-width: 540px;
-    
-}
-.div-about{
-    display: flex;
-    height: 601px;
-    max-width: 430px;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.div-about a{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-.about{
-    font-family: 'Ibarra Real Nova';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    
-    color: #33323D;
-}
-
-.text-about{
-    height: 360px;
-    width: 430px;
+    background-color: #203A4C;
+    color: #FFFFFF;
     font-family: 'Public Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    color: #33323D;
-    mix-blend-mode: normal;
-    opacity: 0.8;
-}
-
-.div-about a{
-    height: 48px;
-    width: 204px;
-    padding: 0;
-    margin: 0 auto;
-}
-
-.btn-about{
-    height: 48px;
-    width: 204px;
-    background-color: #F2F2F2;
-    border: 1px solid #33323D;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    letter-spacing: 2px;
     text-transform: uppercase;
-    color: #33323D;
+    padding-right: 30px;
+    ;
 }
 
-.btn-about:hover{
-    background-color: #c2c2c29d;
+.btn-sobre-mim::before{
+    content: url(../../assets/icons/down-arrows.svg);
+    background: #000000;
+    mix-blend-mode: normal;
+    opacity: 0.1;
+    width: 25%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.btn-sobre-mim:hover{
+    background-color: #5FB4A2;
+}
+
+section{
+    margin-top: 149px;
+    align-items: normal;
+}
+
+.img-about{
+    width: 53%;
+}
+
+.img-about img{
+    display: flex;
+    width: 100%;
+}
+
+.text-about{
+    width: 42%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 46px;
+    border-bottom: 1px solid #33323d40;
+}
+
+.text-about .btn-contato{
+    height: 48px;
+    width: 204px;
+    margin-top: 24px;
+}
+
+.text-about h2{
+    padding: 0;
 }
